infrastructure/aws/cloudformation/csye6225-cf-networking.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Cloud Formation Template - Creating VPC, Subnets, Route Table, Route and Security Groups",
	"Parameters": {
		"VPCName": {
			"Type": "String"
		},
		"SubnetName1": {
			"Type": "String"
		},
		"SubnetName2": {
			"Type": "String"
		},
		"SubnetName3": {
			"Type": "String"
		},
		"SubnetName4": {
			"Type": "String"
		},
		"SubnetName5": {
			"Type": "String"
		},
		"SubnetName6": {
			"Type": "String"
		},
		"IGName": {
			"Type": "String"
		},
		"PubicRouteTableName": {
			"Type": "String"
		}
	},
	"Resources": {
		"ourVPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": "10.0.0.0/16",
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"InstanceTenancy": "default",
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref": "VPCName"
					}
				}]
			}
		},
		"ourSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "us-east-1a",
				"CidrBlock": "10.0.1.0/24",
				"MapPublicIpOnLaunch": true,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref": "SubnetName1"
					}
				}],
				"VpcId": {
					"Ref": "ourVPC"
				}
			}
		},
		"ourSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "us-east-1b",
				"CidrBlock": "10.0.2.0/24",
				"MapPublicIpOnLaunch": true,
				"VpcId": {
					"Ref": "ourVPC"
				},				
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref":"SubnetName2"
					}
				}]
			}
		},
		"ourSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "us-east-1c",
				"CidrBlock": "10.0.3.0/24",
				"MapPublicIpOnLaunch": true,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref": "SubnetName3"
					}
				}],
				"VpcId": {
					"Ref": "ourVPC"
				}
			}
		},
		"ourSubnet4": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "us-east-1a",
				"CidrBlock": "10.0.4.0/24",
				"MapPublicIpOnLaunch": false,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref": "SubnetName4"
					}
				}],
				"VpcId": {
					"Ref": "ourVPC"
				}
			}
		},
		"ourSubnet5": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "us-east-1b",
				"CidrBlock": "10.0.5.0/24",
				"MapPublicIpOnLaunch": false,
				"VpcId": {
					"Ref": "ourVPC"
				},				
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref":"SubnetName5"
					}
				}]
			}
		},
		"ourSubnet6": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "us-east-1c",
				"CidrBlock": "10.0.6.0/24",
				"MapPublicIpOnLaunch": false,
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref": "SubnetName6"
					}
				}],
				"VpcId": {
					"Ref": "ourVPC"
				}
			}
		},
		"ourInternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref": "IGName"
					}
				}]
			}
		},
		"ourIGAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"InternetGatewayId": {
					"Ref": "ourInternetGateway"
				},
				"VpcId": {
					"Ref": "ourVPC"
				}
			}
		},
		"ourPublicRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "ourVPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": {
						"Ref": "PubicRouteTableName"
					}
				}]
			}
		},
		"ourSubnet1RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "ourPublicRouteTable"
				},
				"SubnetId": {
					"Ref": "ourSubnet1"
				}
			}
		},
		"ourSubnet2RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "ourPublicRouteTable"
				},
				"SubnetId": {
					"Ref": "ourSubnet2"
				}
			}
		},
		"ourSubnet3RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "ourPublicRouteTable"
				},
				"SubnetId": {
					"Ref": "ourSubnet3"
				}
			}
		},
		"ourPublicRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "ourInternetGateway"
				},
				"RouteTableId": {
					"Ref": "ourPublicRouteTable"
				}
			}
		},
		"WebServerSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"Properties" : {
				"GroupName" : "csye6225-webapp",
				"GroupDescription" : "Access to ports 22, 80 & 443",
				"VpcId": {"Ref":"ourVPC"},
				"SecurityGroupIngress" : [ {
					"IpProtocol" : "tcp",
					"FromPort" : "22",
					"ToPort" : "22",
				"CidrIp" : "0.0.0.0/0" },
				{
					"IpProtocol" : "tcp",
					"FromPort" : "80",
					"ToPort" : "80",
				"CidrIp" : "0.0.0.0/0" },
				{
					"IpProtocol" : "tcp",
					"FromPort" : "443",
					"ToPort" : "443",
					"CidrIp" : "0.0.0.0/0"
				},
				{
					"IpProtocol": "tcp",
					"FromPort": "8080",
					"ToPort": "8080",
					"CidrIp" : "0.0.0.0/0"
				} ]
			}
		},
		"DBEC2SecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties" : {
				"GroupName": "csye6225-rds",
				"GroupDescription": "Open database for access",
				"SecurityGroupIngress" : [{
					"IpProtocol" : "tcp",
					"FromPort" : "3306",
					"ToPort" : "3306",
					"SourceSecurityGroupId" : { "Ref" : "WebServerSecurityGroup" }
				}],
				"VpcId": {"Ref":"ourVPC"}
			}
		}
	}
}
